прикрутил календарь и маску

--- a/src/pug/main.pug
+++ b/src/pug/main.pug
@@ -61,7 +61,7 @@ html(lang="ru")
 									label.default-input__label Место проведения
 							.form__inputs-input
 								.default-input
-									input.default-input__input(type="text")
+									input.default-input__input.date-input(type="text")
 									label.default-input__label Дата проведения 
 							.form__inputs-input
 								.default-input
@@ -73,7 +73,7 @@ html(lang="ru")
 									label.default-input__label ФИО
 							.form__inputs-input
 								.default-input
-									input.default-input__input(type="tel" placeholder="+7 (000) 000-00-00")
+									input.default-input__input.phone-input(type="tel" placeholder="+7 (000) 000-00-00")
 									label.default-input__label Номер телефона
 							.form__inputs-input.form__inputs-input--submit
 								button.default-btn(type="submit")
