--- a/src/pug/main.pug
+++ b/src/pug/main.pug
@@ -76,7 +76,8 @@ html(lang="ru")
 									input.default-input__input.phone-input(type="tel" placeholder="+7 (000) 000-00-00")
 									label.default-input__label Номер телефона
 							.form__inputs-input.form__inputs-input--submit
-								button.default-btn(type="submit")
+								.default-btn
+									input.default-btn__input(type="submit")
 									<!-- file_get_contents(/img/ico-speaker.svg) -->
 									include ../img/ico-speaker.svg
 									span.default-btn__text В редакцию
